--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,8 @@
 {% extends "base.html" %}
+{% block title %}Index{% endblock %}
+{% block session %}
+    <ul class="navbar-nav">
+        <a class="nav-link" href="/register">register</a>
+        <a class="nav-link" href="/">login</a>
+    </ul>
+{% endblock %}
