--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,7 +4,9 @@
 {% block title %}Register{% endblock %}
 {% block content%}
 
-{{ render_form(form) }}
+<div class="mx-auto p-2" style="width: 200px;">
+    {{ render_form(form) }}
+</div>
 
 <!-- 
     <form>
