adicionado login e redirect para a pagina de logado

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,6 @@
 {% block session %}
     <ul class="navbar-nav">
         <a class="nav-link" href="/register">register</a>
-        <a class="nav-link" href="/">login</a>
+        <a class="nav-link" href="/login">login</a>
     </ul>
 {% endblock %}
